modify google map on index and beautify file

--- a/AirQualityControlUnits/css/styles.css
+++ b/AirQualityControlUnits/css/styles.css
@@ -138,5 +138,22 @@ td
     margin-left: auto !important;
     margin-right: auto !important;
     text-align: center;
+    width: 100%;
     margin-bottom: 100px;
+   
+   
+}
+.list
+{
+  font-size: 15px;
+}
+.span-list
+{
+    font-style: italic;
+    
+}
+.col-sm-12
+{
+    margin-top: 10px !important;
+    font-size: 1rem;
 }
