--- a/AirQualityControlUnits/css/styles.css
+++ b/AirQualityControlUnits/css/styles.css
@@ -166,3 +166,10 @@ td
 {
     color:yellow !important;
 }
+.graphs
+{
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    margin-bottom: 2px !important;
+}
